wwr/styles/rafting.css
/* 19 January 2024 */

@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    
}
 
:root {
    --primary-color: light purple;
    --secondary-color: #9A8C98;
    --accent1-color: #C9ADA7;
    --accent2-color: #FFFFFF;

    --heading-font: Merriweather;
    --paragraph-font: sans-serif;

    --headline-color-on-white: purple;   
    --headline-color-on-color: #FFFFFF; 
    --paragraph-color-on-white: #4A4E69; 
    --paragraph-color-on-color: #FFFFFF; 
    --paragraph-background-color: #eb0af7  ;
    --nav-link-color: #070707;
    --nav-background-color: #7282e9 ;
    --nav-hover-link-color: #FFFFFF;
    --nav-hover-background-color: #9A8C98 ;
}

body {
    background-color: steelblue;
}

header {
    margin: 1rem auto;
    display: grid;
    grid-template-columns: 600px auto;
    max-width: 1300px;
    background-color: var(--nav-background-color);
}

nav {
    display: flex;
    align-items: center;
    justify-content: center; 
}

nav a {
    text-align: center;
    font-size: 20px;
    color: var(--nav-link-color);
    text-decoration: none;
    padding: 35px;
}
nav a:hover {
    background-color: var(--nav-hover-background-color);
    color: var(--nav-hover-link-color);
}

p {
    padding: 10px;
}

h1 {
    position: absolute;
    bottom: 190px;
    left: 550px;
    color: black;
    box-shadow: 0 0 30px slateblue;
}

article {
    width: 20em;
    position: absolute;
    float: right;
    bottom: 45px;
    left: 850px;
    opacity: 75%;
    margin: 0 0 1rem 1rem;
    box-shadow: 0 0 30px slateblue;
}

article img {
    width: 200px;
    height: auto;
    float: right;
}

article p {
    font-family: var(--paragraph-font);
    color: var(--paragraph-color-on-color)
}

section {
    font-family: var(--paragraph-font);
    max-width: 960px;
    padding: 1px;
}

section h1, h2 {
    font-family: var(--heading-font);
    color: var(--headline-color-on-white);
}

footer {
    background-color: slateblue;   
    margin-top: 200px;     
    display: flex;    
    justify-content: space-around;    
    align-items: center;
}

footer nav {
    text-decoration: none;
    align-content: baseline;
    padding-top: 15px;
}

.hero {
    position: relative;
    width:  100%;
    height: auto;
    background-image: url(images/hero.jpeg);
    display: grid;
    padding-top: 5px;
    justify-content: center;
}

#logo_link {
    margin: 1rem auto;
	width: 75px;
	height: auto;
    display: flex;
    padding-top: 5px;
    justify-self: center;
    align-self: center;	
}

.story img{
    max-width: 300px;
    float: left;
    border-radius: 10px;
    border: 2px solid slateblue;
    margin-right: 10px;
}

.story {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 50vh;
    margin: 5px auto;
    width: 75%;
}

.text h2 {
    font-size: 40px;
    padding: 5px;
}

.text p {
    font-size: 18px;
}

.rapids {
    text-align: center;
    margin: 5px auto;
    width: 75%;
}

.row {
    display: flex;
}

.rapid-img img{
    margin: 10px;
    width: 200px;
    height: 200px;
    object-fit: cover;
    border-radius: 10px;   
}

.rapids-text h2 {
    font-size: 40px;
    padding: 10px;
}

.rapids-text figcaption {
    padding: 2px;
    font-size: 16px;
    color: black;
}

